remove coverage folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-/coverage/Icovreport
-/coverage/clover.xml
-/coverage/coverage-final.json
-/coverage/Icov.info
+coverage/
+coverage/Icovreport
+coverage/clover.xml
+coverage/coverage-final.json
+coverage/Icov.info
 
 
 bankly/node_modules
